# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
formaters/: stylish.py
formatters/: stylish.py
gendiff/: __init__.py  cli_args.py  comparator.py  file_parser.py  gendiff.py  generator.py  parser.py  representation.py  tree.py
gendiff/dictionaries/: json_dictionary.py  yaml_dictionary.py
gendiff/formatters/: decoder.py  formatters.py  json.py  json_format.py  map_bool.py  map_item_input_to_output.py  plain.py  plain_format.py  stylish.py  stylish_format.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: file2.yaml  result.json  result_json.json
tests/fixtures/input_files/: file1.yaml
