[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["denis <yudaev1@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = "^5.5"
pytest-cov = "^2.11.1"
flake8 = "^3.9.0"
PyYAML = "^5.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"