[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "gendiff — a program that determines the difference between two data structures"
authors = ["denis <yudaev1@gmail.com>"]
packages = [
  { include = "gendiff" },
]

repository = "https://github.com/sound-round/python-project-lvl2.git"
readme = "README.md"
keywords = [
    "Python",
    "Education",
    "yaml",
    "json",
    "Hexlet"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = "^5.5"
pytest-cov = "^2.11.1"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"